Change branding from IPTV Premium to Premium Streaming
Updated the title and footer content to reflect new branding for Premium Streaming.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPTV Premium - A melhor programação para você</title>
+    <title>Premium Streaming - A melhor programação para você</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1893701952974702"
@@ -51,16 +51,15 @@
 <footer>
     <div class="footer-container">
         <div class="footer-col">
-            <h4>Teste IPTV</h4>
+            <h4>Premium Streaming</h4>
             <ul>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV 4 horas</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Grátis</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV assinar</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Android</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Computador</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Samsung 4K</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV LG Smart</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1" class="cta-link">QUERO O TESTE IPTV AGORA</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste grátis por 4 horas</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Premium Streaming livre para assitir onde e como quiser</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Smart TV (Samsung, LG, Philco, AOC, Philips, TCL e mais) </a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Computador / Notebook</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Celular</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">TV Box</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1" class="cta-link">QUERO O TESTE PREMIUM STREAMING AGORA</a></li>
             </ul>
         </div>
 
@@ -68,7 +67,7 @@
             <h4>Nosso Site</h4>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="planos.html">Planos IPTV</a></li>
+                <li><a href="planos.html">Planos Premium Streaming</a></li>
                 <li><a href="duvidas.html">Perguntas Frequentes</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Fale Conosco</a></li>
             </ul>
@@ -106,10 +105,11 @@
     </div> 
 
     <div class="footer-bottom">
-        <p>IPTV Premium© 2025 – Todos os direitos reservados. Entretenimento com qualidade e liberdade.</p>
-        <p>Site criado por Rogério Reis - © 2025 - (71) 98600-9184</p>
+        <p> Premium Streaming © 2025 – Todos os direitos reservados. Entretenimento com qualidade e liberdade.</p>
+        <p>Site criado por Rogério Reis - © 2025 </p>
     </div>
 </footer>
 
 </body>
+
 </html>
