Fix HTML encoding issues in duvidas.html

--- a/duvidas.html
+++ b/duvidas.html
@@ -90,16 +90,15 @@
 <footer>
     <div class="footer-container">
         <div class="footer-col">
-            <h4>Teste IPTV</h4>
+          <h4>Premium Streaming</h4>
             <ul>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV 4 horas</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Grátis</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV assinar</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Android</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Computador</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Samsung 4K</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV LG Smart</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1" class="cta-link">QUERO O TESTE IPTV AGORA</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste grátis por 4 horas</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Premium Streaming livre para assitir onde e como quiser</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Smart TV (Samsung, LG, Philco, AOC, Philips, TCL e mais) </a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Computador / Notebook</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Celular</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">TV Box</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1" class="cta-link">QUERO O TESTE PREMIUM STREAMING AGORA</a></li>
             </ul>
         </div>
 
@@ -139,4 +138,5 @@
 </footer>
     
 </body>
+
 </html>
