--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="img/iptv_premium_logo.webp" alt="Logo da sua empresa">
+                <img src="img/Logo.jpg" alt="Logo da sua empresa">
             </a>
         </div>
        <nav>
@@ -113,3 +113,4 @@
 </body>
 
 </html>
+
