Fix HTML structure and remove duplicates

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <ul>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste grátis por 4 horas</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Premium Streaming livre para assitir onde e como quiser</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Smart TV (Samsung, LG, Philco, AOC, Philips, TCL e mais) </a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Smart TV </a></li>
+                <p>✅Samsung, LG, Philco, AOC, Philips, TCL entre outras</p>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Computador / Notebook</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Celular</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">TV Box</a></li>
@@ -113,4 +114,5 @@
 </body>
 
 </html>
+
 
