--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste grátis por 4 horas</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Premium Streaming livre para assitir onde e como quiser</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Smart TV </a></li>
-                <p>✅Samsung, LG, Philco, AOC, Philips, TCL entre outras</p>
+                <p>Samsung, LG, Philco, AOC, Philips, TCL entre outras</p>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Computador / Notebook</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Celular</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">TV Box</a></li>
@@ -114,5 +114,6 @@
 </body>
 
 </html>
+
 
 
