--- a/planos.html
+++ b/planos.html
@@ -30,7 +30,7 @@
     <main class="main-content">
         <section class="planos-header">
             <div class="overlay">
-                <h1>Planos IPTV Premium</h1>
+                <h1>Planos PREMIUM STREAMING</h1>
                 <p>A revolução no seu entretenimento com a ascensão da TV por Internet.</p>
             </div>
         </section>
@@ -116,12 +116,12 @@
 
         <section class="conteudo-explicativo">
             <div class="explicativo-item">
-                <h3>O que são Planos IPTV?</h3>
+                <h3>O que são Planos PREMIUM STREAMING?</h3>
                 <p>É um sistema que utiliza a infraestrutura da internet para transmitir conteúdo audiovisual diretamente para dispositivos conectados à rede. Em vez de depender de antenas ou cabos tradicionais, o IPTV oferece uma alternativa moderna e eficiente para os consumidores que buscam mais controle sobre o que assistem e quando assistem.</p>
             </div>
             <div class="explicativo-item">
                 <h3>Qualidade de Transmissão Garantida</h3>
-                <p>A transmissão via internet no IPTV assegura uma qualidade de imagem e som excepcionais. Adaptando-se eficientemente às diferentes velocidades de conexão dos usuários, essa tecnologia garante uma experiência de visualização sem interrupções, elevando a qualidade do entretenimento doméstico a novos patamares.</p>
+                <p>A transmissão via internet no PREMIUM STREAMING assegura uma qualidade de imagem e som excepcionais. Adaptando-se eficientemente às diferentes velocidades de conexão dos usuários, essa tecnologia garante uma experiência de visualização sem interrupções, elevando a qualidade do entretenimento doméstico a novos patamares.</p>
             </div>
         </section>
     </main>
@@ -131,14 +131,13 @@
         <div class="footer-col">
             <h4>Teste IPTV</h4>
             <ul>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV 4 horas</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Grátis</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV assinar</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Android</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Computador</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV Samsung 4K</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste IPTV LG Smart</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1" class="cta-link">QUERO O TESTE IPTV AGORA</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING 4 horas</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING Grátis</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING assinar</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING no Android</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING no Computador</a></li>
+                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING na Samrt Tv</a></li>
+               <li><a href="https://wa.me/message/AAY7BFIZCBYYA1" class="cta-link">QUERO O TESTE PREMIUM STREAMING AGORA</a></li>
             </ul>
         </div>
 
@@ -146,7 +145,7 @@
             <h4>Nosso Site</h4>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="planos.html">Planos IPTV</a></li>
+                <li><a href="planos.html">Planos PREMIUM STREAMING</a></li>
                 <li><a href="duvidas.html">Perguntas Frequentes</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Fale Conosco</a></li>
             </ul>
@@ -172,7 +171,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>IPTV Premium© 2025 – Todos os direitos reservados. Entretenimento com qualidade e liberdade.</p>
+        <p>PREMIUM STREAMING 2025 – Todos os direitos reservados. Entretenimento com qualidade e liberdade.</p>
         <p>Site criado por Rogério Reis - © 2025 - (71) 98600-9184</p>
     </div>
 </footer>
@@ -181,4 +180,5 @@
 
     
 </body>
+
 </html>
