Fix HTML formatting and structure in quemsomos.html

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -113,7 +113,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>IPTV Premium© 2025 – Todos os direitos reservados. Entretenimento com qualidade e liberdade.</p>
+        <p>PREMIUM STREAMING @ 2025 – Todos os direitos reservados. Entretenimento com qualidade e liberdade.</p>
         <p>Site criado por Rogério Reis - © 2025 - (71) 98600-9184</p>
     </div>
 </footer>
@@ -124,3 +124,4 @@
 </body>
 
 </html>
+
