Restore quemsomos.html to original version
Restored the quemsomos.html file to its original state, removing all previous changes.

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -57,7 +57,7 @@
 
             <div class="about-us-compromisso">
                 <h2>Nosso Compromisso</h2>
-                <p>Nosso compromisso é com você, nosso cliente. Trabalhamos incansavelmente para assegurar que nosso serviço não apenas atenda, mas exceda suas expectativas. Estamos em constante evolução, buscando as últimas inovações em tecnologia de IPTV para melhorar e expandir nossa oferta.</p>
+                <p>Nosso compromisso é com você, nosso cliente. Trabalhamos incansavelmente para assegurar que nosso serviço não apenas atenda, mas exceda suas expectativas. Estamos em constante evolução, buscando as últimas inovações em tecnologia em streaming para melhorar e expandir nossa oferta.</p>
             </div>
             
             <div class="call-to-action">
@@ -70,10 +70,9 @@
 <footer>
     <div class="footer-container">
         <div class="footer-col">
-            <h4>Teste IPTV</h4>
+            <h4>PREMIUM STREAMING</h4>
             <ul>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING 4 horas</a></li>
-                <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING assinar</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING no Android</a></li>
                 <li><a href="https://wa.me/message/AAY7BFIZCBYYA1">Teste PREMIUM STREAMING em Computador</a></li>
@@ -124,4 +123,5 @@
 </body>
 
 </html>
+
 
